--- a/templates/poc-data.html
+++ b/templates/poc-data.html
@@ -22,15 +22,15 @@
 
         <p>The 'town' of <strong>Cwmderi</strong> is located on the land of MOD Castlemartin. It is fully in the south east tax zone. The UPRNs of all properties in Cwmderi are listed in MOD_Castlemartin__Cwmderi_UPRN.geojson</a>. The <a href="/static/sample-data/MOD_Castlemartin__Cwmderi.geojson">'town boundaries'</a> and the <a href="/static/sample-data/MOD_Castlemartin__Cwmderi_UPRN.geojson">UPRNs of all properties</a> are available as geojson</a>.</p>
         <p>
-          <img src="/static/images/cwmderi.png" alt="Cwmderi location in the south west of Wales">
+          <img class="figure" src="/static/images/cwmderi.png" alt="Cwmderi location in the south west of Wales">
         </p>
 
         <p>The 'town' of <strong>Pontypandy</strong> is located on the land of ex-RAF Llanbedr. It is split across the north east and south west tax zones. The <a href="/static/sample-data/RAF_Llanbedr__Pontypandy_UPRN.geojson">'town boundaries'</a> and the <a href="/static/sample-data/RAF_Llanbedr__Pontypandy.geojson">UPRNs of all properties</a> are available as geojson</a>.</p>
-        <p><img src="/static/images/pontypandy.png" alt="Pontypandy location near the cost in the middle of Wales"></p>
+        <p><img class="figure" src="/static/images/pontypandy.png" alt="Pontypandy location near the cost in the middle of Wales"></p>
 
         <p>The 'town' of Upper Leadworth is located on the land of MOD Sealand. It is fully in the North tax zone and shares a border with England. The <a href="/static/sample-data/MOD_Sealand__Upper_Leadworth_UPRN.geojson">'town boundaries'</a> and the <a href="/static/sample-data/MOD_Sealand__Upper_Leadworth.geojson">UPRNs of all properties</a> are available as geojson</a>.</p>
         </p>
-        <p><img src="/static/images/upperleadworth.png" alt="Upper Leadworth location in the north east of Wales, bordering England"></p>
+        <p><img class="figure" src="/static/images/upperleadworth.png" alt="Upper Leadworth location in the north east of Wales, bordering England"></p>
 
         <p>
           To illustrate certain functions, the platform also has a small about of data about properties outside of Wales. The UPRNs of these are also <a href="/static-sample-data/English_UPRN.geojson">available as geojson</a>.
@@ -42,7 +42,7 @@
           The boundaries of the two tax zones are arbitrary, although they do follow ward boundaries.
           The boundaries of the <a href="/static/sample-data/North_East_tax_zone.geojson">north east zone</a> and the <a href="/static/sample-data/South_West_tax_zone.geojson">south west zone</a> are available as geojson.
         </p>
-        <p><img src="/static/images/taxzones.png" alt="Tax zones"></p>
+        <p><img class="figure" src="/static/images/taxzones.png" alt="Tax zones"></p>
 
       </div>
     </div>
